src/main/kotlin/com/example/brandcoordinator/common/error/NotFoundException.kt
package com.example.brandcoordinator.common.error

open class NotFoundException(message: String) : RuntimeException(message)
